first working version of login modal dialog

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,5 +4,5 @@
     <img src="images/clock-huge.png"><br>
     A day without time tracking is like a day without sunshine.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Logon</span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-click="showLoginDialog()">Logon</span></a></p>
 </div>
