--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,16 +1,32 @@
 <div class="modal fade">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Yes or No?</h4>
+                <button type="button" class="close" ng-click="close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Login</h4>
             </div>
             <div class="modal-body">
-                <p>It's your call...</p>
+                <p>Please enter your E-Mail address and password to login..</p>
+
+                <form name="loginForm" class="form-horizontal" role="form" novalidate>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">E-Mail</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="email" placeholder="Your E-Mail" required ng-model="credentials.email"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-sm-2 control-label">Password</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="password" placeholder="Your Password" required ng-model="credentials.password"/>
+                        </div>
+                    </div>
+                </form>
+
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="close('No')" class="btn btn-default" data-dismiss="modal">No</button>
-                <button type="button" ng-click="close('Yes')" class="btn btn-primary" data-dismiss="modal">Yes</button>
+                <button ng-disabled="loginForm.$invalid" type="button" ng-click="login()" class="btn btn-primary" data-dismiss="modal">Login</button>
+                <button type="button" ng-click="close()" class="btn" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
