--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,32 +2,38 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close()" data-dismiss="modal"
+                        aria-hidden="true">&times;</button>
                 <h4 class="modal-title">Login</h4>
             </div>
-            <div class="modal-body">
-                <p>Please enter your E-Mail address and password to login..</p>
+            <form name="loginForm" class="form-horizontal" role="form" novalidate>
+                <div class="modal-body">
+                    <div ng-show="hasError" class="alert alert-danger" role="alert">Wrong E-Mail address or password!</div>
 
-                <form name="loginForm" class="form-horizontal" role="form" novalidate>
+                    <p ng-show="!hasError">Please enter your E-Mail address and password to login..</p>
+
                     <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">E-Mail</label>
+
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="email" placeholder="Your E-Mail" required ng-model="credentials.email"/>
+                            <input type="email" class="form-control" id="email" placeholder="Your E-Mail" required
+                                   ng-model="credentials.email"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="password" class="col-sm-2 control-label">Password</label>
+
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="password" placeholder="Your Password" required ng-model="credentials.password"/>
+                            <input type="password" class="form-control" id="password" placeholder="Your Password"
+                                   required ng-model="credentials.password"/>
                         </div>
                     </div>
-                </form>
-
-            </div>
-            <div class="modal-footer">
-                <button ng-disabled="loginForm.$invalid" type="button" ng-click="login()" class="btn btn-primary" data-dismiss="modal">Login</button>
-                <button type="button" ng-click="close()" class="btn" data-dismiss="modal">Cancel</button>
-            </div>
+                </div>
+                <div class="modal-footer">
+                    <button ng-disabled="loginForm.$invalid" type="button" ng-click="login()" class="btn btn-primary">Login</button>
+                    <button type="button" ng-click="close()" class="btn" data-dismiss="modal">Cancel</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
