fine tune login dialog

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button ng-disabled="loginForm.$invalid" type="button" ng-click="login()" class="btn btn-primary">Login</button>
+                    <button ng-disabled="loginForm.$invalid" type="submit" ng-click="login()" class="btn btn-primary">Login</button>
                     <button type="button" ng-click="close()" class="btn" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
