--- a/app/views/directives/navigation.directive.html
+++ b/app/views/directives/navigation.directive.html
@@ -1,5 +1,11 @@
-<ul class="nav navbar-nav">
-    <li ng-repeat="route in routes" ng-class="{active: activeRoute(route)}">
-        <a href="#{{ route.path }}">{{ route.name }}</a>
-    </li>
-</ul>
+<div class="collapse navbar-collapse" id="js-navbar-collapse">
+
+    <ul class="nav navbar-nav">
+        <li ng-repeat="route in routes" ng-class="{active: activeRoute(route)}">
+            <a href="#{{ route.path }}">{{ route.name }}</a>
+        </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right" ng-show="principal">
+        <li><a href="#/logout">Logout</a></li>
+    </ul>
+</div>
