perfect login/logout behaviour

--- a/app/views/directives/navigation.directive.html
+++ b/app/views/directives/navigation.directive.html
@@ -8,4 +8,5 @@
     <ul class="nav navbar-nav navbar-right" ng-show="principal">
         <li><a href="#/logout">Logout</a></li>
     </ul>
+    <p ng-show="principal" class="navbar-text navbar-right">({{ principal.email }})</p>
 </div>
