--- a/app/views/directives/navigation.directive.html
+++ b/app/views/directives/navigation.directive.html
@@ -7,9 +7,9 @@
     </ul>
     <ul ng-show="principal" class="nav navbar-nav navbar-right">
         <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ principal.firstName }} {{ principal.lastName }} <span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> {{ principal.firstName }} {{ principal.lastName }} <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="#/logout">Logout</a></li>
+                <li><a href="#/logout"><span class="glyphicon glyphicon-off"></span> Logout</a></li>
             </ul>
         </li>
     </ul>
