better icon on lets go button

--- a/app/views/start.html
+++ b/app/views/start.html
@@ -6,7 +6,7 @@
     A day without time tracking is like a day without sunshine.
   </p>
   <p>
-    <a class="btn btn-lg btn-success" ng-show="principal" href="#/bookings"><span class="glyphicon glyphicon-heart"></span> Let's go!</span></a>
+    <a class="btn btn-lg btn-success" ng-show="principal" href="#/bookings"><span class="glyphicon glyphicon-time"></span> Let's go!</span></a>
     <a class="btn btn-lg btn-success" ng-hide="principal" ng-click="showLoginDialog()"><span class="glyphicon glyphicon-user"></span> Logon!</span></a>
   </p>
 </div>
