added pristine, dirty, error css to form elements

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -183,3 +183,13 @@ body {
     background-color: #a0c52a;
     border-color: #a0c520;
 }
+
+.form-group .ng-dirty.ng-valid {
+    color: #a0c52a;
+    display: inline;
+}
+
+.form-group .ng-dirty.ng-invalid {
+    color: #a94442;
+    display: inline;
+}
