added type ahead to manage user dialog

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -27,8 +27,8 @@
                     <span class="glyphicon glyphicon-edit"></span> <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="#/bookings/{{ project._id }}">Show bookings</a></li>
-                    <li><a ng-click="showManageUserDialog(project._id)">Manage users</a></li>
+                    <li><a href="#/bookings/{{ project._id }}"><span class="glyphicon glyphicon-time"></span> Show bookings</a></li>
+                    <li><a ng-click="showManageUserDialog(project._id)"><span class="glyphicon glyphicon-user"></span> Manage user</a></li>
                 </ul>
             </div>
         </td>
