--- a/app/views/modals/manageUser.html
+++ b/app/views/modals/manageUser.html
@@ -2,11 +2,60 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close()" data-dismiss="modal"
+                        aria-hidden="true">&times;</button>
                 <h4 class="modal-title">Manager user for project {{ project.project_id }}</h4>
             </div>
             <div class="modal-body">
-                Manage User...
+                <table class="table table-striped" ng-show="project.users.length > 0">
+                    <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>E-Mail</th>
+                        <th>Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="user in project.users">
+                        <td>
+                            {{ user.firstName }}
+                        </td>
+                        <td>
+                            {{ user.lastName }}
+                        </td>
+                        <td>
+                            {{ user.email }}
+                        </td>
+                        <td>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"
+                                        aria-expanded="false">
+                                    <span class="glyphicon glyphicon-edit"></span> <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#/bookings/{{ project._id }}"><span
+                                            class="glyphicon glyphicon-minus-sign"></span> Remove from project</a></li>
+                                </ul>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
+                <form name="addUserForm" novalidate>
+                    <div class="form-group">
+                        <label for="searchString">Search for user to add</label>
+                        <input type="text" ng-model="selected" class="form-control" id="searchString" placeholder="Your search string..."
+                               typeahead="user as user.formattedName for user in getUser($viewValue)" typeahead-loading="loadingUsers"
+                               typeahead-wait-ms="100" typeahead-min-length="3" typeahead-editable="false"/>
+                        <i ng-show="loadingUsers" class="glyphicon glyphicon-refresh"></i>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success" ng-disabled="addButtonDisabled()">Add user to project</button>
+                    </div>
+                </form>
+
             </div>
             <div class="modal-footer">
                 <button type="button" ng-click="close()" class="btn btn-success" data-dismiss="modal">Done</button>
