--- a/app/views/modals/manageUser.html
+++ b/app/views/modals/manageUser.html
@@ -4,7 +4,7 @@
             <div class="modal-header">
                 <button type="button" class="close" ng-click="close()" data-dismiss="modal"
                         aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Manager user for project {{ project.project_id }}</h4>
+                <h4 class="modal-title">Manage user for project {{ project.project_id }}</h4>
             </div>
             <div class="modal-body">
                 <table class="table table-striped" ng-show="project.users.length > 0">
@@ -34,8 +34,7 @@
                                     <span class="glyphicon glyphicon-edit"></span> <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#/bookings/{{ project._id }}"><span
-                                            class="glyphicon glyphicon-minus-sign"></span> Remove from project</a></li>
+                                    <li><a ng-click="removeUser(user._id)"><span class="glyphicon glyphicon-minus-sign"></span> Remove from project</a></li>
                                 </ul>
                             </div>
                         </td>
@@ -46,13 +45,13 @@
                 <form name="addUserForm" novalidate>
                     <div class="form-group">
                         <label for="searchString">Search for user to add</label>
-                        <input type="text" ng-model="selected" class="form-control" id="searchString" placeholder="Your search string..."
+                        <input type="text" ng-model="selected" class="form-control" id="searchString" placeholder="Your search string..." autocomplete="off"
                                typeahead="user as user.formattedName for user in getUser($viewValue)" typeahead-loading="loadingUsers"
                                typeahead-wait-ms="100" typeahead-min-length="3" typeahead-editable="false"/>
                         <i ng-show="loadingUsers" class="glyphicon glyphicon-refresh"></i>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success" ng-disabled="addButtonDisabled()">Add user to project</button>
+                        <button type="submit" class="btn btn-success" ng-disabled="addButtonDisabled()" ng-click="addUser()">Add user to project</button>
                     </div>
                 </form>
 
