load projects for user

--- a/app/views/booking.html
+++ b/app/views/booking.html
@@ -1,3 +1,7 @@
 <h1>Bookings</h1>
 
-<p>Hallo {{ firstName }} {{ lastName }}!</p>
+<ul>
+    <li ng-repeat="project in projects">
+        {{ project.project_id }}
+    </li>
+</ul>
