--- a/app/views/modals/manageUser.html
+++ b/app/views/modals/manageUser.html
@@ -34,7 +34,7 @@
                                     <span class="glyphicon glyphicon-edit"></span> <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a ng-click="removeUser(user._id)"><span class="glyphicon glyphicon-minus-sign"></span> Remove from project</a></li>
+                                    <li><a ng-click="removeUser(user._id)"><span class="glyphicon glyphicon-minus-sign"></span> Remove {{ user.firstName }} from project</a></li>
                                 </ul>
                             </div>
                         </td>
@@ -51,7 +51,7 @@
                         <i ng-show="loadingUsers" class="glyphicon glyphicon-refresh"></i>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success" ng-disabled="addButtonDisabled()" ng-click="addUser()">Add user to project</button>
+                        <button type="submit" class="btn btn-success" ng-disabled="addButtonDisabled()" ng-click="addUser()"><span class="glyphicon glyphicon-plus-sign"></span> Add user to project</button>
                     </div>
                 </form>
 
