--- a/app/views/booking.html
+++ b/app/views/booking.html
@@ -1,7 +1,39 @@
 <h1>Bookings</h1>
 
-<ul>
-    <li ng-repeat="project in projects">
-        {{ project.project_id }}
-    </li>
-</ul>
+<p>Bookings list with pagination here...</p>
+
+<h3>Add new Booking</h3>
+
+<form name="bookingForm" class="form-horizontal" novalidate>
+    <div class="form-group">
+        <label for="inputStart" class="col-sm-2 control-label">Start</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputStart" placeholder="Start time..." required ng-model="newBooking.start"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputEnd" class="col-sm-2 control-label">End</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputEnd" placeholder="End time..." required ng-model="newBooking.end"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputProject" class="col-sm-2 control-label">Project</label>
+        <div class="col-sm-10">
+            <select id="inputProject" class="form-control" ng-model="newBooking.project"
+                    ng-options="project._id as project.project_id for project in projects" required>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputDescription" class="col-sm-2 control-label">Description</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputDescription" placeholder="Your description..." required ng-model="newBooking.description"/>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-success" ng-disabled="bookingForm.$invalid" ng-click="saveNewBooking()"><span class="glyphicon glyphicon-time"></span> Create new Booking</button>
+        </div>
+    </div>
+</form>
