--- a/app/views/booking.html
+++ b/app/views/booking.html
@@ -1,10 +1,12 @@
 <h1>Bookings</h1>
 
-<table class="table table-striped">
+<table ng-hide="bookings.length == 0" class="table table-striped">
     <thead>
     <tr>
+        <th>Date</th>
         <th>Start</th>
         <th>End</th>
+        <th>Project</th>
         <th>Description</th>
         <th>Action</th>
     </tr>
@@ -12,10 +14,16 @@
     <tbody>
     <tr ng-repeat="booking in bookings">
         <td>
-            {{ booking.start | asDate | date:'dd.MM.yyyy HH:mm'}}
+            {{ booking.start | asDate | date:'dd.MM.yyyy'}}
         </td>
         <td>
-            {{ booking.end | asDate | date:'dd.MM.yyyy HH:mm'}}
+            {{ booking.start | asDate | date:'HH:mm'}}
+        </td>
+        <td>
+            {{ booking.end | asDate | date:'HH:mm'}}
+        </td>
+        <td>
+            <span class="label label-default" tooltip="{{booking.project.description}}">{{ booking.project.project_id }}</span>
         </td>
         <td>
             {{ booking.description }}
@@ -35,7 +43,7 @@
     </tbody>
 </table>
 
-<pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
+<pagination ng-hide="bookings.length <= 10" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
 
 <h3>Add new Booking</h3>
 
@@ -64,7 +72,7 @@
         <label for="inputProject" class="col-sm-2 control-label">Project</label>
         <div class="col-sm-10">
             <select id="inputProject" class="form-control" ng-model="newBooking.project"
-                    ng-options="project._id as project.project_id for project in projects" required>
+                    ng-options="project._id as project.formattedName for project in projects" required>
             </select>
         </div>
     </div>
