--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,6 +1,6 @@
 <h1>Projects</h1>
 
-<table class="table table-striped">
+<table ng-hide="projects.length == 0" class="table table-striped">
     <thead>
     <tr>
         <th>Project ID</th>
@@ -36,7 +36,7 @@
     </tbody>
 </table>
 
-<pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
+<pagination ng-hide="projects.length <= 10" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
 
 <h3 ng-show="canCreateNewProjects()">Add new Project</h3>
 
