--- a/app/views/booking.html
+++ b/app/views/booking.html
@@ -1,6 +1,6 @@
 <h1>Bookings</h1>
 
-<table ng-hide="bookings.length == 0" class="table table-striped">
+<table ng-show="bookings.length > 0" class="table table-striped">
     <thead>
     <tr>
         <th>Date</th>
@@ -47,7 +47,7 @@
     </tbody>
 </table>
 
-<pagination ng-hide="totalItems <= 10" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
+<pagination ng-show="totalItems > 10" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
 
 <h3>Add new Booking</h3>
 
@@ -58,7 +58,7 @@
             <p class="input-group">
                 <input type="text" id="inputDate" class="form-control" datepicker-popup="dd.MM.yyyy" ng-model="newBookingDate" ng-required="true" close-text="Close" is-open="opened" starting-day="1"/>
                 <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                    <button type="button" class="btn btn-default" ng-click="openDatePicker($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
             </p>
         </div>
