--- a/app/views/booking.html
+++ b/app/views/booking.html
@@ -39,7 +39,8 @@
                     <span class="glyphicon glyphicon-edit"></span> <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="#/bookings/{{ project._id }}"><span class="glyphicon glyphicon-time"></span> Show booking</a></li>
+                    <li><a ng-click="editBooking(booking._id)"><span class="glyphicon glyphicon-edit"></span> Edit booking</a></li>
+                    <li><a ng-click="deleteBooking(booking._id)"><span class="glyphicon glyphicon-trash"></span> Delete booking</a></li>
                 </ul>
             </div>
         </td>
