implemented bookings delete

--- a/app/views/modals/confirmation.html
+++ b/app/views/modals/confirmation.html
@@ -7,7 +7,7 @@
                 <h4 class="modal-title">Confirmation</h4>
             </div>
             <div class="modal-body">
-                <h3>{{ messageText }}</h3>
+                <p>{{ messageText }}</p>
             </div>
             <div class="modal-footer">
                 <button type="submit" ng-click="close(true)" class="btn btn-success" data-dismiss="modal">Yes please!</button>
